# alphaforge

./: .env  .env.example  .gitignore  Makefile  PROJECT_STATUS.md  README.md  docker-compose.yml  main.py  project_setup.txt  pyproject.toml
backtesting/: batch_backtest.py  batch_backtest_v2.py  concept_analyzer.py  context_engine.py  dsl_executor.py  dsl_signal_engine.py  dsl_signal_engine_backup.py  dsl_signal_engine_v2.py  event_engine.py  exit_engine.py  feature_engine.py  formula_registry.py  metrics_engine.py  models.py  mtf_broadcast.py  mtf_context_engine.py  mtf_engine.py  mtf_setup_engine.py  mtf_trigger_engine.py  portfolio_engine.py  qualification_engine.py  regime_engine.py  report_generator.py  rule_mapping_executor.py  run_dsl_strategy.py  run_strategy_backtest.py  scoring_engine.py  session_engine.py  setup_engine.py  setup_engine_v2.py  signal_engine.py  simple_backtest.py  smc_features.py  state_engine.py  state_machine.py  strategy_adapter.py  support_resistance.py  test_features.py  trigger_engine.py
config/: settings.py
coverage/: dsl_coverage_report.py  strategy_coverage_report.py
experiments/: comparison_engine.py  experiment_tracker.py  insight_engine.py  portfolio_allocator.py  regime_detector.py  strategy_ranker.py
memory/: shared_memory.py
ontology/: compiler.py  dsl_normalizer.py  dsl_schema.py  field_normalizer.py  normalizer.py  rule_registry.json  rule_registry_backup.json  trading_concepts.json
orchestration/: research_graph.py
requirements/: base.txt
research/: alphaforge_v3_plan.md  atr_distribution_test.py  bos_test.py  (+116 more)
(+23 files in other folders)
