[project]
name = "alphaforge"
version = "0.1.0"
description = "AI-powered strategy intelligence and quantitative research platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langgraph",
    "langsmith",
    "openai",
    "pydantic",
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "plotly",
    "streamlit",
    "vectorbt",
    "celery",
    "redis",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "loguru",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "telethon>=1.43.2",
    "pymupdf>=1.27.2.3",
    "instructor>=1.15.1",
    "yfinance>=1.3.0",
    "anywidget>=0.11.0",
    "coverage==7.4.4",
    "numba==0.61.2",
    "dhanhq>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "schemas", "backtesting", "dashboard"]
